[gd_scene load_steps=3 format=3 uid="uid://b4ech08qcicnm"]

[ext_resource type="PackedScene" uid="uid://4w2n3dlf02b7" path="res://addons/keymap_screen/keymap_screen.tscn" id="1"]
[ext_resource type="Script" path="res://main.gd" id="2"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 9.0
offset_right = -15.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="KeymapScreen" parent="." instance=ExtResource("1")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -49.0
offset_right = -39.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
text = "Save Keymap"

[node name="LoadButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -296.0
offset_top = -48.0
offset_right = -183.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
text = "Load Keymap"

[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]
